Make sure that we don't call setup twice since it causes some bad-and-a-half things to happen.  (Basically an endless loop.)

BUG:106038

svn path=/branches/KDE/3.5/kdemultimedia/juk/; revision=462306